2009-12-03  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/test/test_cache_manager.py:
	Fix fillTestCache. The `i' and `filesize' variables were not evaluated
	until the lambda function (callback) was fired. Unfortunately, when ALL
	the callbacks were fired, the last value of those two variables was used
	producing the same tempfiles overwriting them instead of making the
	cache grow.
	* flumotion/test/test_component_httpserver.py:
	Fix a typpo, we add a callback, not an errback

2009-12-03  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/monitor/nagios/component.py (added):
	Add a separate component module.
	Add a FlipFlop check that connects to the manager and watches the state
	of a component for a given amout of time. Raises a critical if the mood
	alternates between two extremes (by default: happy and hungry) more
	than the given number of times.

	* flumotion/monitor/nagios/main.py:
	Move the Mood check to the component module.

	* flumotion/monitor/nagios/Makefile.am:
	Dist the new file.

2009-12-03  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/monitor/nagios/main.py:
	Do not return an the status twice when failing to connect to a
	manager.
	The errback on manager connection was giving the correct status
	message, but the generic errback was also being fired. Prevent that by
	forwarding a NagiosException to the generic errback.

2009-12-03  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpserver.py:
	Fixed i18n of the 'path' property warning message.

2009-12-03  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpserver.py:
	Add a warning message to the http-server component when its property
	path has been set in conjunction with a file provider plug.

2009-12-02  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpcached/httpcached.xml:
	Fixed fileprovider-httpcached bundle definition.
